@@ -1,3 +1,9 @@
+2010-04-11 CHEN Yangyang <skabyy@gmail.com>
+
+    * Add a dialog with "Do not ask again" checkbutton to ask the user to 
+      make sure to exit Ailurus
+    * Add a checkmenu "Ask when quit" to the Preferences
+
 2010-04-11 MA Yue <velly.empire@gmail.com>
 
     * Add a new icon for "Ailurus quick start"
